src/ratings/k8s/0-ratings-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookinfo-dev-ratings
  namespace: bookinfo-dev
  labels:
    app: bookinfo-dev-ratings
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookinfo-dev-ratings
  template:
    metadata:
      labels:
        app: bookinfo-dev-ratings
    spec:
      containers:
        - name: bookinfo-dev-ratings
          image: registry-gital.opsta.in.th/bookinfo/ratings:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: web-port
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
      imagePullSecrets:
        - name: registry-bookinfo
